<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="187dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo"
                tools:srcCompat="@drawable/logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_below="@+id/logo"
                android:id="@+id/txtIntroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/register_title"
                android:text="@string/registration_form"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/txtIntroText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtIntroText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/create_your_account"
                android:text="Create you Account"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/rFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtIntroText2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:autofillHints=""
                android:backgroundTint="#ffff"
                android:ems="10"
                android:hint="@string/rFirstName"
                android:inputType="textPersonName"
                android:textColor="#ffff"
                android:textColorHint="#ffff"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/rLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rFirstName"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:autofillHints=""
                android:backgroundTint="#ffff"
                android:ems="10"
                android:hint="@string/rLastName"
                android:inputType="textPersonName"
                android:textColor="#ffff"
                android:textColorHint="#ffff"
                android:textSize="17sp" />

            <EditText
                android:inputType="textPersonName"
                android:id="@+id/rUserName"
                android:layout_below="@+id/rLastName"
                android:hint="@string/rUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="#ffff"
                android:ems="10"
                android:textColor="#ffff"
                android:textColorHint="#ffff"
                android:textSize="17sp" />

            <ProgressBar
                android:id="@+id/rProgress"
                style="?android:attr/progressBarStyle"
                android:layout_below="@+id/rUserName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="100dp"
                android:hint="@string/rProgress"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/rUserPass"
                android:layout_below="@+id/rUserName"
                android:inputType="textPassword"
                android:hint="@string/rUserPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:backgroundTint="#ffff"
                android:ems="10"
                android:textColor="#ffff"
                android:textColorHint="#ffff"
                android:textSize="17sp" />




            <Button
                android:id="@+id/btnSubmit"
                android:hint="@string/btnRegister"
                android:text="@string/btnRegister"
                android:layout_below="@+id/rUserPass"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:textColor="#fff"
                android:textSize="18sp"
                android:radius="360dp"/>



            <TextView
                android:id="@+id/rAlready"
                android:layout_width="481dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSubmit"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="105dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/chilanka_regular"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account"
                android:textColor="#fff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/rSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSubmit"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="204dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/chilanka_regular"
                android:gravity="center_horizontal"
                android:hint="@string/sign_in"
                android:onClick="goToLogin"
                android:text="@string/sign_in"
                android:textColor="#fff"
                android:textSize="17sp" />




        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>