<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="287dp"
                android:layout_height="143dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/logo"
                tools:srcCompat="@drawable/logo"
                android:contentDescription="@string/todo" />

            <ProgressBar
                android:id="@+id/lProgress"
                style="?android:attr/logo"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginUsername"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="158dp"
                android:layout_marginTop="-161dp"
                android:layout_marginEnd="160dp"
                android:hint="@string/lProgress"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:text="@string/login_into_your_account"
                android:layout_marginTop="80dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_below="@+id/logo"/>

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="330dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="#ffff"
                android:drawableStart="@drawable/ic_outline_supervised_user_circle_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="18sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/loginPass"
                android:layout_width="340dp"

                android:layout_height="wrap_content"
                android:layout_below="@+id/loginUsername"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#fff"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_below="@+id/loginPass"
                android:hint="@string/login_button"
                android:text="@string/login"

                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="77dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:textColor="#fff"
                android:textSize="18sp"
                android:radius="360dp"
                />


            <TextView
                android:id="@+id/rAlready"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="98dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/chilanka_regular"
                android:gravity="center_horizontal"
                android:text="No account yet?"
                android:textColor="#fff"
                android:textSize="17sp"
                tools:text="No account yet?" />

            <TextView
                android:id="@+id/rSign"
                android:layout_width="492dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="158dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/chilanka_regular"
                android:gravity="center_horizontal"
                android:hint="@string/sign_in"
                android:onClick="goToRegister"
                android:text="Sign Up"
                android:textColor="#fff"
                android:textSize="17sp" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
