<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:background="#fff"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_round_arrow_back_ios_24"
            android:onClick="backMain"/>

        <TextView
            android:id="@+id/txtPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:fontFamily="@font/fredokaone_regular"
            android:gravity="center"
            android:text="Update Profile"
            android:textColor="#333333"
            android:textSize="45sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="235dp"
        >
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fillViewport="true"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <ProgressBar
                        android:id="@+id/profileProgress"
                        style="?android:attr/progressBarStyle"
                        android:layout_below="@+id/txtLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:hint="@string/rProgress"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txtfirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="First name"
                        android:layout_marginStart="40dp"

                        android:textColor="#fff"
                        android:textSize="22sp"

                         />
                    <EditText
                        android:id="@+id/rFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtIntroText2"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:autofillHints=""
                        android:backgroundTint="#ffff"
                        android:ems="10"
                        android:hint="@string/rFirstName"
                        android:inputType="textPersonName"
                        android:textColor="#ffff"
                        android:textColorHint="#ffff"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/txtLastname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:text="Last Name"
                        android:layout_marginTop="20dp"
                        android:textColor="#fff"
                        android:textSize="22sp"
                         />



                    <EditText
                        android:id="@+id/rLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rFirstName"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:autofillHints=""
                        android:backgroundTint="#ffff"
                        android:ems="10"
                        android:hint="@string/rLastName"
                        android:inputType="textPersonName"
                        android:textColor="#ffff"
                        android:textColorHint="#ffff"
                        android:textSize="17sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_below="@+id/linear_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:text="User Name"
                    android:textColor="#fff"
                    android:textSize="20sp"
                     />
                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/rUserName"
                    android:layout_below="@+id/txtUsername"
                    android:hint="@string/rUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:autofillHints=""
                    android:backgroundTint="#ffff"
                    android:ems="10"
                    android:textColor="#ffff"
                    android:textColorHint="#ffff"
                    android:textSize="17sp" />


                <TextView
                    android:id="@+id/txtpassword"
                    android:layout_below="@+id/rUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:text="Password"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteY="259dp" />
                <EditText
                    android:id="@+id/rUserPass"
                    android:layout_below="@+id/txtpassword"
                    android:inputType="textPassword"
                    android:hint="@string/rUserPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:backgroundTint="#ffff"
                    android:ems="10"
                    android:textColor="#ffff"
                    android:textColorHint="#ffff"
                    android:textSize="17sp" />



                <Button
                    android:id="@+id/adProfUpdate"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rUserPass"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="157dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="166dp"
                    android:background="@drawable/rounded_button"
                    android:text="Update"
                    android:textColor="#fff" />



            </RelativeLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>